<resources>
    <string name="app_name">vivaapp-mobile</string>
    <string name="title_home">Ana sayfa</string>
    <string name="title_dashboard">Kategori</string>
    <string name="title_notifications">Sepet</string>
    <string name="category1_name">Meyve, Sebze</string>
    <string name="category2_name">Et, Tavuk, Balık</string>
    <string name="category3_name">İçecek</string>
    <string name="category4_name">Temel Gıda</string>
    <string name="category5_name">Deterjan, Temizlik</string>
    <string name="category6_name">Fırın, Pastane</string>
    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>